# compiler_translator

./: CMakeLists.txt  README.md
include/: compilator.hpp  encoded_data.hpp  uncoded_data.hpp
src/: dump.cpp  encode.cpp  encoded_data.cpp  main.cpp  old_dump.cpp  utilits.cpp
test/: input1.json  output.json
tests/: input0.json  input1.json  output.json
